<resources>
    <string name="keyboard_skinadd_id_default" />
    <string name="setting_portrait_default_value">2</string>
    <string name="setting_landscape_default_value">1</string>
    <string name="input_mode_type_default_value">@string/input_mode_type_list_item_10key_keyboard</string>
    <string name="portrait_input_mode_type_hiragana_kanji_default_value">@string/input_mode_type_default_value</string>
    <string name="portrait_input_mode_type_full_alphabet_default_value">@string/input_mode_type_default_value</string>
    <string name="portrait_input_mode_type_full_numeric_default_value">@string/input_mode_type_default_value</string>
    <string name="portrait_input_mode_type_full_katakana_default_value">@string/input_mode_type_default_value</string>
    <string name="portrait_input_mode_type_half_alphabet_default_value">@string/input_mode_type_default_value</string>
    <string name="portrait_input_mode_type_half_numeric_default_value">@string/input_mode_type_default_value</string>
    <string name="portrait_input_mode_type_half_katakana_default_value">@string/input_mode_type_default_value</string>
    <string name="portrait_input_mode_type_all_default_value">@string/input_mode_type_default_value</string>
    <string name="portrait_input_mode_type_phone_default_value">@string/input_mode_type_list_item_qwerty_keyboard</string>
    <string name="land_input_mode_type_hiragana_kanji_default_value">@string/input_mode_type_default_value</string>
    <string name="land_input_mode_type_full_alphabet_default_value">@string/input_mode_type_default_value</string>
    <string name="land_input_mode_type_full_numeric_default_value">@string/input_mode_type_default_value</string>
    <string name="land_input_mode_type_full_katakana_default_value">@string/input_mode_type_default_value</string>
    <string name="land_input_mode_type_half_alphabet_default_value">@string/input_mode_type_default_value</string>
    <string name="land_input_mode_type_half_numeric_default_value">@string/input_mode_type_default_value</string>
    <string name="land_input_mode_type_half_katakana_default_value">@string/input_mode_type_default_value</string>
    <string name="land_input_mode_type_all_default_value">@string/input_mode_type_default_value</string>
    <string name="land_input_mode_type_phone_default_value">@string/input_mode_type_list_item_qwerty_keyboard</string>
    <string name="keyboard_50key_type_default_value">@string/keyboard_50key_type_list_item_vertical_right</string>
    <string name="auto_cursor_movement_id_default">1200</string>
    <string name="kana_roman_input_default_value">Roman</string>
    <string name="mushroom_id_default">notuse</string>
    <string name="kana_roman_input_mode_list_item_roman">Roman</string>
    <string name="kana_roman_input_mode_list_item_kana">Kana</string>
    <string name="input_mode_type_list_item_qwerty_keyboard">0</string>
    <string name="input_mode_type_list_item_10key_keyboard">1</string>
    <string name="input_mode_type_list_item_50key_keyboard">3</string>
    <string name="keyboard_50key_type_list_item_vertical_right">0</string>
    <string name="keyboard_50key_type_list_item_vertical_left">1</string>
    <string name="keyboard_50key_type_list_item_horizontal">2</string>
    <string name="setting_portrait_list_item_1">1</string>
    <string name="setting_portrait_list_item_2">2</string>
    <string name="setting_portrait_list_item_3">3</string>
    <string name="setting_portrait_list_item_4">4</string>
    <string name="setting_portrait_list_item_5">5</string>
    <string name="setting_landscape_list_item_1">1</string>
    <string name="setting_landscape_list_item_2">2</string>
    <string name="auto_cursor_movement_list_item_off">0</string>
    <string name="auto_cursor_movement_list_item_fast">700</string>
    <string name="auto_cursor_movement_list_item_normal">1200</string>
    <string name="auto_cursor_movement_list_item_slow">1700</string>
    <string name="mushroom_list_item_use">use</string>
    <string name="mushroom_list_item_notuse">notuse</string>
    <string name="ti_ime_name_setting_title_standard_txt">iWnn IME settings</string>
    <string name="ti_preference_lang_setting_menu_txt">Language</string>
    <string name="ti_preference_key_assist_txt">Key operation</string>
    <string name="ti_preference_design_txt">Design</string>
    <string name="ti_preference_key_showing_txt">Key display</string>
    <string name="ti_preference_screen_txt">Screen layout</string>
    <string name="ti_preference_input_menu_txt">Others</string>
    <string name="ti_preference_input_menu_ja_txt">Japanese</string>
    <string name="ti_preference_external_apl_txt">External application</string>
    <string name="ti_preference_dictionary_menu_txt">Dictionary</string>
    <string name="ti_preference_key_sound_title_txt">Sound on key press</string>
    <string name="ti_preference_key_vibration_title_txt">Vibrate on key press</string>
    <string name="ti_preference_preview_title_txt">Key preview</string>
    <string name="ti_preference_auto_caps_title_txt">Auto capitalization</string>
    <string name="ti_preference_auto_caps_summary_txt">Automatically capitalize the 1st char of a sentence</string>
    <string name="ti_preference_auto_space_title_txt">Auto space input</string>
    <string name="ti_preference_auto_space_summary_txt">Automatically input a space after selecting a candidate</string>
    <string name="ti_preference_fullscreen_mode_title_txt">Fullscreen mode</string>
    <string name="ti_preference_fullscreen_mode_summary_txt">Enable fullscreen mode on landscape screen</string>
    <string name="ti_preference_kana_roman_input_mode_title_txt">Roman letter / Kana letter</string>
    <string name="ti_preference_keyboard_type_title_txt">Keyboard type</string>
    <string name="ti_preference_keyboard_type_summary_txt">Set keyboard type for each orientation and input mode</string>
    <string name="ti_preference_keyboard_type_portrait_title_txt">Portrait keyboard type setting</string>
    <string name="ti_preference_keyboard_type_landscape_title_txt">Landscape keyboard type setting</string>
    <string name="ti_preference_keyboard_type_all_title_txt">Setting collectively</string>
    <string name="ti_preference_keyboard_type_all_summary_txt">Set keyboard type for all input modes</string>
    <string name="ti_preference_keyboard_type_diff_title_txt">Setting for each input mode</string>
    <string name="ti_preference_keyboard_type_diff_summary_txt">Set keyboard type for each input mode</string>
    <string name="ti_preference_keyboard_type_diff_full_hirakana_title_txt">Hiragana-Kanji</string>
    <string name="ti_preference_keyboard_type_diff_full_katakana_title_txt">Full-width Katakana</string>
    <string name="ti_preference_keyboard_type_diff_half_katakana_title_txt">Half-width Katakana</string>
    <string name="ti_preference_keyboard_type_diff_full_alphabet_title_txt">Full-width alphabet</string>
    <string name="ti_preference_keyboard_type_diff_half_alphabet_title_txt">Half-width alphabet</string>
    <string name="ti_preference_keyboard_type_diff_full_number_title_txt">Full-width numeric</string>
    <string name="ti_preference_keyboard_type_diff_half_number_title_txt">Half-width numeric</string>
    <string name="ti_preference_auto_cursor_movement_menu_txt">Auto cursor movement</string>
    <string name="ti_preference_prediction_title_txt">Word prediction</string>
    <string name="ti_preference_prediction_title_ja_txt">Japanese word prediction</string>
    <string name="ti_preference_correct_spell_title_txt">Typing error correction</string>
    <string name="ti_preference_correct_spell_summary_txt">Display predicted words for correcting typing error</string>
    <string name="ti_preference_funfun_title_txt">Wildcard prediction</string>
    <string name="ti_preference_funfun_title_ja_txt">Japanese wildcard prediction</string>
    <string name="ti_preference_funfun_summary_ja_txt">Word prediction with specified reading string length</string>
    <string name="ti_preference_funfun_summary_txt">Word prediction with specified string length</string>
    <string name="ti_preference_input_learning_title_txt">Input word learning</string>
    <string name="ti_preference_input_learning_title_ja_txt">Japanese input word learning</string>
    <string name="ti_preference_aboutime_menu_txt">About IME</string>
    <string name="ti_preference_user_dictionary_clear_learning_title_txt">Clear learning dictionary</string>
    <string name="ti_dialog_button_ok_txt">OK</string>
    <string name="ti_dialog_button_cancel_txt">Cancel</string>
    <string name="ti_dialog_clear_learning_dictionary_message_txt">Clear learning dictionary?</string>
    <string name="ti_preference_flick_title_txt">Flick input</string>
    <string name="ti_preference_flick_sensitivity_title_txt">Flick sensitivity</string>
    <string name="ti_preference_flick_sensitivity_summary_txt">Set sensitivity of flick</string>
    <string name="ti_preference_flick_toggle_title_txt">Toggle input</string>
    <string name="ti_preference_flick_toggle_summary_txt">Enable toggle input</string>
    <string name="ti_preference_display_left_right_title_txt">Display left/right key</string>
    <string name="ti_preference_display_left_right_summary_txt">Display left/right key on QWERTY keyboard</string>
    <string name="ti_preference_reset_setting_menu_txt">Reset</string>
    <string name="ti_preference_reset_setting_title_txt">Reset settings</string>
    <string name="ti_preference_reset_setting_message_txt">Reset settings?</string>
    <string name="ti_preference_common_txt">Common</string>
    <string name="ti_preference_tenkey_txt">10-key</string>
    <string name="ti_preference_hardwarekeyboard_txt">Hardware keyboard</string>
    <string name="ti_preference_key_vibration_time_title_txt">Vibration time on key press</string>
    <string name="ti_preference_half_space_input_title_ja_txt">Half-width space input</string>
    <string name="ti_preference_half_space_input_summary_ja_txt">Input half-width space in full-width character input mode</string>
    <string name="ti_preference_candidate_area_title_txt">Candidate area</string>
    <string name="ti_preference_candidate_area_summary_txt">Set number of lines and a display option of candidate area</string>
    <string name="ti_preference_candidate_lines_portrait_title_txt">Number of lines(Portrait)</string>
    <string name="ti_preference_candidate_lines_landscape_title_txt">Number of lines(Landscape)</string>
    <string name="ti_preference_show_candidate_area_always_title_txt">Show candidate area always</string>
    <string name="ti_preference_show_candidate_area_always_summary_txt">Show the candidate area even if there are no candidates to be displayed</string>
    <string name="ti_preference_halfalphabet_setting_menu_txt">Half alphabet keyboard</string>
    <string name="ti_preference_halfalphabet_setting_summary_txt">Enable the japanese keyboard for inputting half-width alphabetic characters</string>
    <string name="ti_preference_input_mode_txt">Input mode</string>
    <string name="ti_preference_keyboard_type_50key_title_txt">50-key keyboard</string>
    <string name="ti_preference_50key_type_title_txt">50-key layout</string>
    <string name="ti_preference_parenthesis_cursor_movement_title_txt">Move cursor within parentheses</string>
    <string name="ti_preference_parenthesis_cursor_movement_summary_txt">Move cursor within parentheses when entering supported parentheses (「」,【】)</string>
    <string name="ti_preference_display_number_key_title_txt">Display number key</string>
    <string name="ti_preference_display_number_key_summary_txt">Display number key on QWERTY keyboard</string>
    <string name="ti_iwnnime_version_title_txt">iWnn IME</string>
    <string name="flick_sensitivity_default_value">30</string>
    <string name="ti_iwnnime_copyright_txt">Ver.2.6.2-Benesse-02\nOMRON SOFTWARE Co.,Ltd.</string>
</resources>