<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/ti_preference_common_txt"
        android:key="category_assist">
        <SwitchPreference
            android:title="@string/ti_preference_key_sound_title_txt"
            android:key="key_sound"
            android:defaultValue="@bool/key_sound_default_value"/>
        <SwitchPreference
            android:title="@string/ti_preference_key_vibration_title_txt"
            android:key="key_vibration"
            android:defaultValue="@bool/key_vibration_default_value"/>
        <jp.co.omronsoft.iwnnime.ml.controlpanel.KeyVibrateDialogPreference
            android:title="@string/ti_preference_key_vibration_time_title_txt"
            android:key="key_vibration_time"
            android:dependency="key_vibration"/>
        <SwitchPreference
            android:title="@string/ti_preference_preview_title_txt"
            android:key="popup_preview"
            android:defaultValue="@bool/popup_preview_default_value"/>
        <SwitchPreference
            android:title="@string/ti_preference_parenthesis_cursor_movement_title_txt"
            android:key="parenthesis_cursor_movement"
            android:summary="@string/ti_preference_parenthesis_cursor_movement_summary_txt"
            android:defaultValue="@bool/parenthesis_cursor_movement_default_value"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/ti_preference_tenkey_txt"
        android:key="category_12key">
        <SwitchPreference
            android:title="@string/ti_preference_flick_title_txt"
            android:key="flick_input"
            android:defaultValue="@bool/flick_input_default_value"/>
        <jp.co.omronsoft.iwnnime.ml.controlpanel.FlickSensitivityPreference
            android:title="@string/ti_preference_flick_sensitivity_title_txt"
            android:key="flick_sensitivity_relative"
            android:summary="@string/ti_preference_flick_sensitivity_summary_txt"
            android:dependency="flick_input"
            android:defaultValue="@string/flick_sensitivity_default_value"/>
        <SwitchPreference
            android:title="@string/ti_preference_flick_toggle_title_txt"
            android:key="flick_toggle_input"
            android:summary="@string/ti_preference_flick_toggle_summary_txt"
            android:dependency="flick_input"
            android:defaultValue="@bool/flick_toggle_input_default_value"/>
        <jp.co.omronsoft.iwnnime.ml.controlpanel.AutoCursorMovementListPreference
            android:title="@string/ti_preference_auto_cursor_movement_menu_txt"
            android:key="opt_auto_cursor_movement"
            android:defaultValue="@string/auto_cursor_movement_id_default"
            android:negativeButtonText="@string/ti_dialog_button_cancel_txt"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/ti_preference_hardwarekeyboard_txt"
        android:key="category_hardware_keyboard">
        <ListPreference
            android:entries="@array/kana_roman_input_mode"
            android:title="@string/ti_preference_kana_roman_input_mode_title_txt"
            android:key="kana_roman_input"
            android:defaultValue="@string/kana_roman_input_default_value"
            android:negativeButtonText="@string/ti_dialog_button_cancel_txt"
            android:entryValues="@array/kana_roman_input_mode_id"/>
    </PreferenceCategory>
</PreferenceScreen>
