<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/ti_preference_input_menu_ja_txt"
        android:key="category_input_ja">
        <SwitchPreference
            android:title="@string/ti_preference_input_learning_title_ja_txt"
            android:key="opt_enable_learning_ja"
            android:defaultValue="@bool/opt_enable_learning_ja_default_value"/>
        <SwitchPreference
            android:title="@string/ti_preference_prediction_title_ja_txt"
            android:key="opt_prediction_ja"
            android:defaultValue="@bool/opt_prediction_ja_default_value"/>
        <SwitchPreference
            android:title="@string/ti_preference_funfun_title_ja_txt"
            android:key="opt_funfun_ja"
            android:summary="@string/ti_preference_funfun_summary_ja_txt"
            android:dependency="opt_prediction_ja"
            android:defaultValue="@bool/opt_funfun_ja_default_value"/>
        <SwitchPreference
            android:title="@string/ti_preference_half_space_input_title_ja_txt"
            android:key="opt_half_space_input_ja"
            android:summary="@string/ti_preference_half_space_input_summary_ja_txt"
            android:defaultValue="@bool/opt_half_space_input_ja_default_value"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/ti_preference_input_menu_txt"
        android:key="category_input_en">
        <SwitchPreference
            android:title="@string/ti_preference_input_learning_title_txt"
            android:key="opt_enable_learning_en"
            android:defaultValue="@bool/opt_enable_learning_en_default_value"/>
        <SwitchPreference
            android:title="@string/ti_preference_prediction_title_txt"
            android:key="opt_prediction_en"
            android:defaultValue="@bool/opt_prediction_en_default_value"/>
        <SwitchPreference
            android:title="@string/ti_preference_funfun_title_txt"
            android:key="opt_funfun_en"
            android:summary="@string/ti_preference_funfun_summary_txt"
            android:dependency="opt_prediction_en"
            android:defaultValue="@bool/opt_funfun_en_default_value"/>
        <SwitchPreference
            android:title="@string/ti_preference_correct_spell_title_txt"
            android:key="opt_spell_correction_en"
            android:summary="@string/ti_preference_correct_spell_summary_txt"
            android:dependency="opt_prediction_en"
            android:defaultValue="@bool/opt_spell_correction_en_default_value"/>
        <SwitchPreference
            android:title="@string/ti_preference_auto_space_title_txt"
            android:key="opt_auto_space"
            android:summary="@string/ti_preference_auto_space_summary_txt"
            android:dependency="opt_prediction_en"
            android:defaultValue="@bool/opt_auto_space_default_value"/>
        <SwitchPreference
            android:title="@string/ti_preference_auto_caps_title_txt"
            android:key="auto_caps"
            android:summary="@string/ti_preference_auto_caps_summary_txt"
            android:defaultValue="@bool/auto_caps_default_value"/>
    </PreferenceCategory>
</PreferenceScreen>
