<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/ti_preference_design_txt"
        android:key="category_design">
        <PreferenceScreen
            android:persistent="false"
            android:title="@string/ti_preference_keyboard_type_title_txt"
            android:key="keyboard_mode_type_setting"
            android:summary="@string/ti_preference_keyboard_type_summary_txt"
            android:fragment="jp.co.omronsoft.iwnnime.ml.controlpanel.ControlPanelPrefFragment">
            <extra
                android:name="fragment"
                android:value="iwnnime_pref_keyboardtype"/>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/ti_preference_key_showing_txt"
        android:key="category_key_showing">
        <SwitchPreference
            android:title="@string/ti_preference_display_left_right_title_txt"
            android:key="opt_display_left_right_key"
            android:summary="@string/ti_preference_display_left_right_summary_txt"
            android:defaultValue="@bool/opt_display_left_right_key_default_value"/>
        <SwitchPreference
            android:title="@string/ti_preference_display_number_key_title_txt"
            android:key="opt_display_number_key"
            android:summary="@string/ti_preference_display_number_key_summary_txt"
            android:defaultValue="@bool/opt_display_number_key_default_value"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/ti_preference_screen_txt"
        android:key="category_screen">
        <SwitchPreference
            android:title="@string/ti_preference_fullscreen_mode_title_txt"
            android:key="fullscreen_mode"
            android:summary="@string/ti_preference_fullscreen_mode_summary_txt"
            android:defaultValue="@bool/fullscreen_mode_default_value"/>
        <PreferenceScreen
            android:title="@string/ti_preference_candidate_area_title_txt"
            android:key="opt_candidate_area"
            android:summary="@string/ti_preference_candidate_area_summary_txt"
            android:fragment="jp.co.omronsoft.iwnnime.ml.controlpanel.ControlPanelPrefFragment">
            <extra
                android:name="fragment"
                android:value="iwnnime_pref_candidatearea"/>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/ti_preference_input_mode_txt"
        android:key="category_input_mode">
        <SwitchPreference
            android:title="@string/ti_preference_halfalphabet_setting_menu_txt"
            android:key="opt_enable_half_alphabet"
            android:summary="@string/ti_preference_halfalphabet_setting_summary_txt"
            android:defaultValue="@bool/half_alphabet_mode_default_value"/>
    </PreferenceCategory>
</PreferenceScreen>
