<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/ti_preference_reset_setting_menu_txt"
        android:key="category_reset">
        <jp.co.omronsoft.iwnnime.ml.controlpanel.IWnnClearLearningDictionaryDialogPreference
            android:title="@string/ti_preference_user_dictionary_clear_learning_title_txt"
            android:key="clear_learn_dictionary"
            android:dialogMessage="@string/ti_dialog_clear_learning_dictionary_message_txt"
            android:positiveButtonText="@string/ti_dialog_button_ok_txt"
            android:negativeButtonText="@string/ti_dialog_button_cancel_txt"/>
        <jp.co.omronsoft.iwnnime.ml.controlpanel.ResetSettingsDialogPreference
            android:title="@string/ti_preference_reset_setting_title_txt"
            android:key="reset_settings"
            android:dialogMessage="@string/ti_preference_reset_setting_message_txt"
            android:positiveButtonText="@string/ti_dialog_button_ok_txt"
            android:negativeButtonText="@string/ti_dialog_button_cancel_txt"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/ti_preference_aboutime_menu_txt">
        <Preference
            android:title="@string/ti_iwnnime_version_title_txt"
            android:key="iwnnime"
            android:summary="@string/ti_iwnnime_copyright_txt"
            style="?android:attr/preferenceInformationStyle"/>
    </PreferenceCategory>
</PreferenceScreen>
