<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:entries="@array/setting_portrait_entry"
        android:title="@string/ti_preference_candidate_lines_portrait_title_txt"
        android:key="setting_portrait"
        android:defaultValue="@string/setting_portrait_default_value"
        android:negativeButtonText="@string/ti_dialog_button_cancel_txt"
        android:entryValues="@array/setting_portrait_value"/>
    <ListPreference
        android:entries="@array/setting_landscape_entry"
        android:title="@string/ti_preference_candidate_lines_landscape_title_txt"
        android:key="setting_landscape"
        android:defaultValue="@string/setting_landscape_default_value"
        android:negativeButtonText="@string/ti_dialog_button_cancel_txt"
        android:entryValues="@array/setting_landscape_value"/>
    <SwitchPreference
        android:title="@string/ti_preference_show_candidate_area_always_title_txt"
        android:key="show_candidate_area_always"
        android:summary="@string/ti_preference_show_candidate_area_always_summary_txt"
        android:defaultValue="@bool/show_candidate_area_always_default_value"/>
</PreferenceScreen>
